# hashfasta

./: Cargo.toml  README.md
src/: cli.rs  hashers.rs  main.rs  parser.rs
