[package]
name = "hashfasta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noodles = { version = "0.77.0", features = ["fasta", "fastq"] }
clap = { version = "4.5.4", features = ["derive"] }
fxhash = "0.2.1"
env_logger = "0.11.3"
log = "0.4.21"
termcolor = "1.4.1"
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
highway = "1.1.0"
md-5 = "0.11.0-pre.3"
hex = "0.4.3"
sha2 = "0.11.0-pre.3"
niffler = "2.6.0"
anyhow = "1.0.86"